--- a/app/templates/booking_new.html
+++ b/app/templates/booking_new.html
@@ -11,7 +11,8 @@
   <div class="card shadow-sm">
     <div class="card-body">
       <!-- Correct route path per router: POST /bookings -->
-      <form method="post" action="/bookings" class="row g-3">
+      <form id="bookingCreateForm" method="post" action="/bookings" class="row g-3">
+
         <input type="hidden" name="item_id" value="{{ item.id }}">
 
         <div class="col-12 col-md-6">
