--- a/app/templates/favorites.html
+++ b/app/templates/favorites.html
@@ -201,7 +201,7 @@
             {% endif %}
             {% if s.price_per_day is defined %}
               <div class="sim-price-now">
-                {{ s.price_per_day }} {{ s.currency or '$' }} <span class="sim-unit">/ day</span>
+                {{ s.display_price }} {{ s.display_currency }}<span class="sim-unit">/ day</span>
               </div>
             {% endif %}
           </div>
